// Some portions generated by Co-Pilot
import React from "react"
import { render } from "@testing-library/react"
import { describe, expect, it } from "vitest"
import ProfilePic from "../index"

describe("ProfilePic component", () => {
  it("should render correctly with default size", () => {
    const { container } = render(
      <ProfilePic identifier="pmc" name="sample name" />,
    )

    expect(container).toMatchSnapshot()
  })

  it("should render correctly - no profile pic found", () => {
    const { container } = render(<ProfilePic identifier="foo" name="Joe Bloggs" />)
    expect(container).toMatchSnapshot()
  })

  it("should render correctly with custom size", () => {
    const { container } = render(<ProfilePic identifier="pmc" name="Sample Name" size={30} />)
    expect(container).toMatchSnapshot()
  })
})
