// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfilePic component > should render correctly - no profile pic found 1`] = `
<div>
  <img
    alt="Joe Bloggs"
    class="ml-2 mb-0 rounded-full"
    height="50"
    src="/images/authors/foo.jpg"
    width="50"
  />
</div>
`;

exports[`ProfilePic component > should render correctly with custom size 1`] = `
<div>
  <img
    alt="Sample Name"
    class="ml-2 mb-0 rounded-full"
    height="30"
    src="/images/authors/pmc.jpg"
    width="30"
  />
</div>
`;

exports[`ProfilePic component > should render correctly with default size 1`] = `
<div>
  <img
    alt="sample name"
    class="ml-2 mb-0 rounded-full"
    height="50"
    src="/images/authors/pmc.jpg"
    width="50"
  />
</div>
`;
